test/files/neg/t663.check
t663.scala:11: error: name clash between defined and inherited member:
def asMatch(node: Test.this.Matchable): Any in trait MatchableImpl and
def asMatch(m: Test.this.Node): Any at line 11
have same type after erasure: (node: test.Test#NodeImpl)Object
    def asMatch(m : Node) : Any = {
        ^
one error found
